17 minor GUI fixes and updates.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -41,5 +41,6 @@
         <file>icons/compose.png</file>
         <file>icons/signature-small.png</file>
         <file>icons/check-mark-small.png</file>
+        <file>icons/bitcoin.png</file>
     </qresource>
 </RCC>
