--- a/src/gui/ui/dlgdecrypt.ui
+++ b/src/gui/ui/dlgdecrypt.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Decrypt / Verify</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resource.qrc">
+    <normaloff>:/icons/icons/padlock_open.png</normaloff>:/icons/icons/padlock_open.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout_3">
@@ -47,6 +51,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
