--- a/src/gui/ui/dlgencrypt.ui
+++ b/src/gui/ui/dlgencrypt.ui
@@ -6,22 +6,39 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>534</width>
-    <height>549</height>
+    <width>507</width>
+    <height>521</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Sign / Encrypt</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBoxSign">
      <property name="title">
       <string/>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QToolButton" name="toolButton">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="../resource.qrc">
+            <normaloff>:/icons/icons/signature-small.png</normaloff>:/icons/icons/signature-small.png</iconset>
+          </property>
+          <property name="autoRaise">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
         <item>
          <widget class="QCheckBox" name="checkBoxSign">
           <property name="sizePolicy">
@@ -32,8 +49,14 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>30</width>
+            <width>50</width>
             <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>50</width>
+            <height>16777215</height>
            </size>
           </property>
           <property name="text">
@@ -44,7 +67,7 @@
         <item>
          <widget class="QLabel" name="labelAs">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -53,6 +76,12 @@
            <size>
             <width>15</width>
             <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>20</width>
+            <height>16777215</height>
            </size>
           </property>
           <property name="text">
@@ -68,15 +97,35 @@
         </item>
        </layout>
       </item>
-      <item>
-       <widget class="QCheckBox" name="checkBoxAlso">
-        <property name="text">
-         <string>Automatically add Signer to Recipient list</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
+      <item row="1" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>26</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBoxAlso">
+          <property name="text">
+           <string>Automatically add Signer to Recipient list</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -86,25 +135,42 @@
      <property name="title">
       <string/>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
+       <widget class="QToolButton" name="toolButton_2">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../resource.qrc">
+          <normaloff>:/icons/icons/lock.png</normaloff>:/icons/icons/lock.png</iconset>
+        </property>
+        <property name="autoRaise">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxEncrypt">
         <property name="text">
          <string>Encrypt</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="3">
        <widget class="QLabel" name="labelRecipients">
         <property name="text">
-         <string>Recipients:</string>
+         <string>To Recipients:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" rowspan="2">
+      <item row="1" column="0" rowspan="2" colspan="2">
        <widget class="QListWidget" name="listWidgetNotAdded"/>
       </item>
-      <item row="1" column="1">
+      <item row="1" column="2">
        <widget class="QPushButton" name="pushButtonAdd">
         <property name="text">
          <string>&gt;</string>
@@ -114,10 +180,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2" rowspan="2">
+      <item row="1" column="3" rowspan="2">
        <widget class="QListWidget" name="listWidgetAdded"/>
       </item>
-      <item row="2" column="1">
+      <item row="2" column="2">
        <widget class="QPushButton" name="pushButtonRemove">
         <property name="text">
          <string>&lt;</string>
@@ -163,6 +229,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
