--- a/src/gui/widgets/transportdetails.ui
+++ b/src/gui/widgets/transportdetails.ui
@@ -62,6 +62,9 @@
        <property name="readOnly">
         <bool>false</bool>
        </property>
+       <property name="placeholderText">
+        <string>127.0.0.1,8442,username,password</string>
+       </property>
       </widget>
      </item>
      <item row="2" column="1">
