--- a/src/gui/widgets/btctransactionmanager.ui
+++ b/src/gui/widgets/btctransactionmanager.ui
@@ -6,324 +6,208 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1078</width>
-    <height>681</height>
+    <width>743</width>
+    <height>329</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Recent transactions</string>
   </property>
-  <widget class="QTableWidget" name="tableTxBtc">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>50</y>
-     <width>981</width>
-     <height>321</height>
-    </rect>
-   </property>
-   <column>
-    <property name="text">
-     <string>Type</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Confirmations</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Destination</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Amount</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Address</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Transaction ID</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Involves watchonly</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>201</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Latest Bitcoin transactions</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>390</y>
-     <width>171</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Latest pool transactions</string>
-   </property>
-  </widget>
-  <widget class="QTableWidget" name="tableTxPool">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>410</y>
-     <width>501</width>
-     <height>211</height>
-    </rect>
-   </property>
-   <column>
-    <property name="text">
-     <string>Status</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Type</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Amount</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Pool</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Transaction ID</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QPushButton" name="buttonRefresh">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>10</y>
-     <width>161</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Refresh all</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="editTxCount">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>15</y>
-     <width>113</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>20</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelTxCount">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>20</y>
-     <width>231</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Number of transactions to display</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="editSearchTx">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>560</y>
-     <width>531</width>
-     <height>27</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelSearchTx">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>540</y>
-     <width>71</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Enter txid</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="buttonSearchTx">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>590</y>
-     <width>101</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Show details</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>620</x>
-     <y>440</y>
-     <width>81</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Confirmed</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelBalanceC">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>440</y>
-     <width>111</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>000.00000000</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelBalanceWatC">
-   <property name="geometry">
-    <rect>
-     <x>840</x>
-     <y>440</y>
-     <width>111</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>000.00000000</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelBalanceP">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>470</y>
-     <width>111</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>000.00000000</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>620</x>
-     <y>470</y>
-     <width>62</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Pending</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_20">
-   <property name="geometry">
-    <rect>
-     <x>810</x>
-     <y>440</y>
-     <width>31</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>BTC</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_19">
-   <property name="geometry">
-    <rect>
-     <x>860</x>
-     <y>410</y>
-     <width>71</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Watchonly</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelBalanceWatP">
-   <property name="geometry">
-    <rect>
-     <x>840</x>
-     <y>470</y>
-     <width>111</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>000.00000000</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_18">
-   <property name="geometry">
-    <rect>
-     <x>730</x>
-     <y>410</y>
-     <width>62</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Wallet</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_22">
-   <property name="geometry">
-    <rect>
-     <x>810</x>
-     <y>470</y>
-     <width>31</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>BTC</string>
-   </property>
-  </widget>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Latest Bitcoin transactions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLabel" name="labelTxCount">
+     <property name="text">
+      <string>Number of transactions to display</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3" colspan="2">
+    <widget class="QLineEdit" name="editTxCount">
+     <property name="text">
+      <string>20</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="6" colspan="2">
+    <widget class="QPushButton" name="buttonRefresh">
+     <property name="text">
+      <string>Refresh all</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="8">
+    <widget class="QTableWidget" name="tableTxBtc">
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Type</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Confirmations</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Destination</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Amount</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Address</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Transaction ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Involves watchonly</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Latest pool transactions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" rowspan="6" colspan="2">
+    <widget class="QTableWidget" name="tableTxPool">
+     <column>
+      <property name="text">
+       <string>Status</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Type</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Amount</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Pool</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Transaction ID</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="3" column="5">
+    <widget class="QLabel" name="label_18">
+     <property name="text">
+      <string>Wallet</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="7">
+    <widget class="QLabel" name="label_19">
+     <property name="text">
+      <string>Watchonly</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="3">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Confirmed</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="4" colspan="2">
+    <widget class="QLabel" name="labelBalanceC">
+     <property name="text">
+      <string>000.00000000</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="6">
+    <widget class="QLabel" name="label_20">
+     <property name="text">
+      <string>BTC</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="7">
+    <widget class="QLabel" name="labelBalanceWatC">
+     <property name="text">
+      <string>000.00000000</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="3">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Pending</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="4" colspan="2">
+    <widget class="QLabel" name="labelBalanceP">
+     <property name="text">
+      <string>000.00000000</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="6">
+    <widget class="QLabel" name="label_22">
+     <property name="text">
+      <string>BTC</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="7">
+    <widget class="QLabel" name="labelBalanceWatP">
+     <property name="text">
+      <string>000.00000000</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2">
+    <widget class="QLabel" name="labelSearchTx">
+     <property name="text">
+      <string>Enter txid</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="2" colspan="6">
+    <widget class="QLineEdit" name="editSearchTx"/>
+   </item>
+   <item row="8" column="2" colspan="2">
+    <widget class="QPushButton" name="buttonSearchTx">
+     <property name="text">
+      <string>Show details</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
