--- a/src/gui/widgets/marketdetails.ui
+++ b/src/gui/widgets/marketdetails.ui
@@ -42,7 +42,7 @@
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="QLineEdit" name="lineEditAssetID">
+        <widget class="QLineEdit" name="lineEditInstrumentDefinitionID">
          <property name="enabled">
           <bool>true</bool>
          </property>
