--- a/src/gui/widgets/pageoffer_accounts.ui
+++ b/src/gui/widgets/pageoffer_accounts.ui
@@ -318,7 +318,7 @@
          </widget>
         </item>
         <item row="0" column="2">
-         <widget class="QLineEdit" name="lineEditServerID">
+         <widget class="QLineEdit" name="lineEditNotaryID">
           <property name="enabled">
            <bool>false</bool>
           </property>
