--- a/src/gui/widgets/requestdlg.ui
+++ b/src/gui/widgets/requestdlg.ui
@@ -62,7 +62,7 @@
         </property>
         <property name="icon">
          <iconset resource="../resource.qrc">
-          <normaloff>:/icons/addressbook</normaloff>:/icons/addressbook</iconset>
+          <normaloff>:/icons/icons/rolodex_card2.png</normaloff>:/icons/icons/rolodex_card2.png</iconset>
         </property>
        </widget>
       </item>
