--- a/src/gui/widgets/accountdetails.ui
+++ b/src/gui/widgets/accountdetails.ui
@@ -96,7 +96,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="labelServer">
        <property name="text">
-        <string>Server:</string>
+        <string>Via Notary:</string>
        </property>
       </widget>
      </item>
