--- a/src/gui/widgets/requestdlg.ui
+++ b/src/gui/widgets/requestdlg.ui
@@ -98,6 +98,9 @@
          <iconset resource="../resource.qrc">
           <normaloff>:/icons/account</normaloff>:/icons/account</iconset>
         </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonTextOnly</enum>
+        </property>
        </widget>
       </item>
       <item row="2" column="0">
