Made 'new server' creation process much easier.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -52,5 +52,6 @@
         <file>icons/money_fist2.png</file>
         <file>icons/money_fist3_small.png</file>
         <file>icons/money_fist4_small.png</file>
+        <file>icons/fistful_of_cash_72.png</file>
     </qresource>
 </RCC>
