Added password manager feature to Moneychanger.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/widgets/offerdetails.ui
+++ b/src/gui/widgets/offerdetails.ui
@@ -260,6 +260,9 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <column>
       <property name="text">
        <string>Price</string>
