--- a/src/gui/widgets/wizardaddnym.ui
+++ b/src/gui/widgets/wizardaddnym.ui
@@ -13,23 +13,16 @@
   <property name="windowTitle">
    <string>Wizard</string>
   </property>
-  <widget class="MTPageAcct_Name" name="wizardPage1"/>
-  <widget class="MTPageNym_Keysize" name="wizardPage2"/>
-  <widget class="MTPageNym_Authority" name="wizardPage3"/>
-  <widget class="MTPageNym_Source" name="wizardPage4"/>
-  <widget class="MTPageNym_AltLocation" name="wizardPage5"/>
+  <widget class="MTPageAcct_Name" name="mtpageAcct_Name"/>
+  <widget class="MTPageNym_Authority" name="mtpageNym_Authority"/>
+  <widget class="MTPageNym_Source" name="mtpageNym_Source"/>
+  <widget class="MTPageNym_AltLocation" name="mtpageNym_AltLocation"/>
  </widget>
  <customwidgets>
   <customwidget>
    <class>MTPageAcct_Name</class>
    <extends>QWizardPage</extends>
    <header>gui/widgets/pageacct_name.hpp</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MTPageNym_Keysize</class>
-   <extends>QWizardPage</extends>
-   <header>gui/widgets/pagenym_keysize.hpp</header>
    <container>1</container>
   </customwidget>
   <customwidget>
