--- a/src/gui/widgets/pagenym_authority.ui
+++ b/src/gui/widgets/pagenym_authority.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>84</height>
+    <width>448</width>
+    <height>156</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,13 +15,62 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Select the Authority for your Nym:</string>
+      <string>Algorithm:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
+    <widget class="QComboBox" name="comboBoxAlgorithm">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>220</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <item>
+      <property name="text">
+       <string>ECDSA (Default)</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>1024-bit RSA (Legacy)</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Authority:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
     <widget class="QComboBox" name="comboBoxAuthority">
      <property name="enabled">
       <bool>true</bool>
@@ -34,13 +83,13 @@
      </property>
      <property name="maximumSize">
       <size>
-       <width>150</width>
+       <width>220</width>
        <height>16777215</height>
       </size>
      </property>
      <item>
       <property name="text">
-       <string>Self-Signed</string>
+       <string>Self-Signed (Recommended)</string>
       </property>
      </item>
      <item>
@@ -55,7 +104,7 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="3" column="0" colspan="2">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>NOTE: Only 'Self-Signed' is currently operational.</string>
